# rad-vs-instruct

./: .gitignore  LICENSE  README.md  pyproject.toml
rad_vs_instruct/: exp.sh  plot.py  ppo.py  test.csv  test.py  test.sh  train.py  wrappers.py
rad_vs_instruct/datasets/: dataset_RAD_n102.pkl  dataset_RAD_n102_n100.pkl  dataset_RA_n479.pkl  dataset_RA_n479_n100.pkl  dataset_RA_n479_n400.pkl  dataset_RA_n479_n400_n100.pkl  dataset_RA_n479_n400_n200.pkl  dataset_RA_n479_n79.pkl  dataset_R_n139.pkl  dataset_R_n139_n100.pkl
rad_vs_instruct/storage/combine/dataset_RA_n479_n400/: log_0.csv  log_1.csv  log_2.csv  log_3.csv  log_4.csv  policy_params_seed_0_dataset_dataset_RA_n479_n400_combine.msgpack  policy_params_seed_1_dataset_dataset_RA_n479_n400_combine.msgpack  policy_params_seed_2_dataset_dataset_RA_n479_n400_combine.msgpack  policy_params_seed_3_dataset_dataset_RA_n479_n400_combine.msgpack  policy_params_seed_4_dataset_dataset_RA_n479_n400_combine.msgpack
rad_vs_instruct/storage/combine/dataset_RA_n479_n400_n100/: log_0.csv  log_1.csv  log_2.csv  log_3.csv  log_4.csv  policy_params_seed_0_dataset_dataset_RA_n479_n400_n100_combine.msgpack  policy_params_seed_1_dataset_dataset_RA_n479_n400_n100_combine.msgpack  policy_params_seed_2_dataset_dataset_RA_n479_n400_n100_combine.msgpack  policy_params_seed_3_dataset_dataset_RA_n479_n400_n100_combine.msgpack  policy_params_seed_4_dataset_dataset_RA_n479_n400_n100_combine.msgpack
rad_vs_instruct/storage/combine/dataset_RA_n479_n400_n200/: log_0.csv  log_1.csv  log_2.csv  log_3.csv  log_4.csv  (+5 more)
(+60 files in other folders)
