[project]
name = "rad-marl"
version = "0.1.0"
description = "A comparative study of RAD embeddings and natural language instruction embeddings in Automata-Conditioned Reinforcement Learning (AC-RL)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfa-gym>=0.2.3",
    "dfax>=0.1.10",
    "wandb==0.21.4",
    "distrax==0.1.5",
    "pandas==2.3.2",
    "dill>=0.4.1",
    "rad-embeddings>=0.2.0"
]
